--- a/app/src/main/res/layout/fragment_ocr_fragment.xml
+++ b/app/src/main/res/layout/fragment_ocr_fragment.xml
@@ -74,11 +74,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:textAlignment="center"
                     android:text="@string/keras_ocr_result"
-                    android:textStyle="bold"
+                    android:textAlignment="center"
                     android:textAppearance="@android:style/TextAppearance.Large"
                     android:textSize="28sp"
+                    android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/frame_output" />
@@ -113,53 +113,43 @@
                     android:background="#ededed"
                     app:layout_constraintTop_toBottomOf="@id/inferenceTime" />
 
-                <!--<FrameLayout
-                    android:id="@+id/frame_output_style"
-                    android:layout_width="244dp"
-                    android:layout_height="244dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/recyclerViewStyles">
-
-                    <ImageView
-                        android:id="@+id/imageview_styled"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/light_gray_border"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
-
-                    <ImageView
-                        android:id="@+id/imageview_placeholder"
-                        android:layout_width="44dp"
-                        android:layout_height="44dp"
-                        android:visibility="visible"
-                        android:layout_gravity="center"
-                        android:src="@drawable/ic_painting_brush"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
-
-                    <ProgressBar
-                        android:id="@+id/progressbar_style"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:indeterminateTint="@color/dark_gray"
-                        android:visibility="gone" />
-
-                </FrameLayout>-->
+                <TextView
+                    android:id="@+id/headerKerasOcrML"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/ml_kit_result"
+                    android:textAlignment="center"
+                    android:textAppearance="@android:style/TextAppearance.Large"
+                    android:textSize="28sp"
+                    android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/viewHorizontal" />
 
                 <TextView
-                    android:id="@+id/inference_info"
+                    android:id="@+id/textViewOcrResultML"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:textAlignment="center"
+                    android:textAppearance="@android:style/TextAppearance.Large"
+                    android:textSize="28sp"
+                    android:text="@{viewModelXml.mlKitOcrtext}"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/headerKerasOcrML" />
+
+                <TextView
+                    android:id="@+id/inferenceTimeML"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@{`Inference time: ` + viewModelXml.inferenceTimeMlKit + `ms`}"
                     android:gravity="center_horizontal"
-                    android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textViewOcrResultML" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
