--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,15 +22,17 @@
             android:id="@+id/imageViewBack"
             android:layout_width="28dp"
             android:layout_height="32dp"
+            android:visibility="gone"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:src="@drawable/ic_baseline_arrow_back_24"/>
 
         <TextView
-            android:text="@string/app_name"
+            android:text="@string/comparing_ocr_models"
             android:textColor="#ffffff"
-            android:textSize="24dp"
+            android:textSize="24sp"
+            android:textAlignment="center"
             android:layout_marginStart="24dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
     </androidx.appcompat.widget.Toolbar>
